--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>My First Ever Github Repo</title>
 </head>
 <body>
-    
+  <div>
+    <h3>My Practice</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima eaque reiciendis beatae adipisci provident vitae enim repudiandae tenetur! Omnis quibusdam, minima quo cumque id commodi esse dolor maxime culpa asperiores.</p>
+  </div>  
 </body>
 </html>
